feat : add sol